inprogress of building website

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 !<!DOCTYPE html>
 <html>
+<!--headerelement-->
+<head id="header">
+    <link rel="stylesheet" href="css/productlanding.css">
+    <!--company logo-->
+    <div class="logo">
+    <img src="images/kingsman.jpg" id="header-img"/>
+    </div>
 
-<head>
+    <!--nav bar-->
+    <nav id="nav-bar">
+        <!--clickable link-->
+        <ul>
+            <li><a class="nav-link" href="#How">How to join</a></li>
+            <li><a class="nav-link" href="#Contact">Contact us</a></li>
+            <li><a class="nav-link" href="#About">About us</a></li>
+        </ul>
+
+    </nav>
+
+    
 
 </head>
 
+
 <body>
-    
+
 </body>
 </html>
