--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <!--headerelement-->
 <head id="header">
@@ -18,13 +18,15 @@
         </ul>
 
     </nav>
-
-    
-
+ 
 </head>
 
 
 <body>
+
+      <section id="kingsman">
+        <iframe width="560" height="315" src="kingsman.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
 
 </body>
 </html>
