--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
         <iframe width="560" height="315" src="kingsman.mp4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </section>
 
+      <form id="form" action="https://www.freecodecamp.com/email-submit"> 
+        <input type="email" id="email" placeholder="Enter email.." required/>
+        <input type="submit" id="submit" value="Submit" require/>
+    </form>
+
 </body>
 </html>
